<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/AppThemeExtrato"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="@dimen/margin_title_start"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:title="@string/strName"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icLogout"
                    android:layout_width="@dimen/width_ic_logo"
                    android:layout_height="@dimen/heigth_ic_logo"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin_top_ic_logo"
                    android:layout_marginEnd="@dimen/margin_end_ic_logo"
                    android:layout_marginRight="@dimen/margin_right_ic_logo"
                    android:src="@drawable/logout_app" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textConta"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/margin_start_text"
                    android:layout_marginLeft="@dimen/margin_start_text"
                    android:layout_marginBottom="@dimen/margin_bottom_desc_conta"
                    android:text="@string/strConta"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textConta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView7"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/margin_start_text"
                    android:layout_marginLeft="@dimen/margin_start_text"
                    android:layout_marginBottom="@dimen/margin_bottom_conta"
                    android:text="@string/strCount"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/conta_text_size" />

                <TextView
                    android:id="@+id/textAgencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textConta"
                    android:layout_toEndOf="@+id/textConta"
                    android:layout_toRightOf="@+id/textConta"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/agency_text_size"
                    android:text="@string/strAgency" />


                <TextView
                    android:id="@+id/textSaldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_start_text"
                    android:layout_marginLeft="@dimen/margin_start_text"
                    android:layout_marginBottom="@dimen/margin_bottom_saldo"
                    android:text="@string/strBalance"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/saldo_text_size" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textSaldo"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/margin_start_text"
                    android:layout_marginLeft="@dimen/margin_start_text"
                    android:layout_marginBottom="@dimen/margin_bottom_desc_saldo"
                    android:text="@string/strSaldo"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.MainActivity">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_linear_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strRecentes"
                    android:textSize="@dimen/recent_text_size" />
            </LinearLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimerFrameLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/card_shimmer" />

                    <include layout="@layout/card_shimmer" />

                    <include layout="@layout/card_shimmer" />

                    <include layout="@layout/card_shimmer" />


                </LinearLayout>


            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>